--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./p5.min.js"></script>
     <script src="./exercise5.js"></script>
-    <title>Template</title>
+    <title>E5</title>
 </head>
 <body>
     
